<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="Input" Id="{4c9dfc78-dde0-47bb-a8fe-9d550e4bab0d}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
//***MCP************************************************************************
	//EL3314 - AI1
	R1_01_00 AT	%I*: INT; //Master stop PB not pressed - black pb on mcp
	R1_01_01 AT	%I*: INT; //case Estop circuit okay (Rly1 (120vac)
	R1_01_02 AT %I*: INT; //Remote Mode Selected (NO)
	R1_01_03 AT %I*: INT; //MCP PSU1 DC OK
	
	//EL3314 - AI2
	R1_02_00 AT	%I*: INT; //
	R1_02_01 AT	%I*: INT;
	R1_02_02 AT %I*: INT; 
	R1_02_03 AT %I*: INT; 
	
	//EL3314 - AI3
	R1_03_00 AT	%I*: INT; //
	R1_03_01 AT	%I*: INT;
	R1_03_02 AT %I*: INT; 
	R1_03_03 AT %I*: INT; 

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>