<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="Alias" Id="{ebc75665-f0df-4b03-b4d1-48515468f179}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Alias
VAR
	i : INT := 0;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ //R1 : MCP**  
	
//INPUT
	//AI	
	MCP_IO.ThermalCouple[1].Temperature_raw					:= Input.R1_01_00;  //NC -
	MCP_IO.ThermalCouple[2].Temperature_raw					:= Input.R1_01_01;  
	MCP_IO.ThermalCouple[3].Temperature_raw					:= Input.R1_01_02; 
	MCP_IO.ThermalCouple[4].Temperature_raw					:= Input.R1_01_03; 

	MCP_IO.ThermalCouple[5].Temperature_raw					:= Input.R1_02_00;  //NC -
	MCP_IO.ThermalCouple[6].Temperature_raw					:= Input.R1_02_01;  
	MCP_IO.ThermalCouple[7].Temperature_raw					:= Input.R1_02_02; 
	MCP_IO.ThermalCouple[8].Temperature_raw					:= Input.R1_02_03; 
	
	MCP_IO.ThermalCouple[9].Temperature_raw					:= Input.R1_03_00;  //NC -
	MCP_IO.ThermalCouple[10].Temperature_raw				:= Input.R1_03_01;  
	MCP_IO.ThermalCouple[11].Temperature_raw				:= Input.R1_03_02; 
	MCP_IO.ThermalCouple[12].Temperature_raw				:= Input.R1_03_03; 
	
	//OUTPUT
	//AQ
	Output.R1_18_00	:= MCP_IO.ChargerSP_raw;
					
	

	
//*************************************************************************************************************	
	]]></ST>
    </Implementation>
    <LineIds Name="Alias">
      <LineId Id="14" Count="1" />
      <LineId Id="450" Count="1" />
      <LineId Id="17" Count="3" />
      <LineId Id="378" Count="0" />
      <LineId Id="480" Count="2" />
      <LineId Id="412" Count="0" />
      <LineId Id="483" Count="0" />
      <LineId Id="485" Count="2" />
      <LineId Id="484" Count="0" />
      <LineId Id="452" Count="0" />
      <LineId Id="408" Count="0" />
      <LineId Id="415" Count="0" />
      <LineId Id="409" Count="0" />
      <LineId Id="462" Count="0" />
      <LineId Id="436" Count="0" />
      <LineId Id="417" Count="0" />
      <LineId Id="438" Count="0" />
      <LineId Id="403" Count="0" />
      <LineId Id="393" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>